# lscm

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  config.mk  lscm.cpp  main.cpp
src/: Boundary.cpp  Boundary.h  Edge.cpp  Edge.h  FException.cpp  FException.h  Face.cpp  Face.h  FaceNormalTrait.h  FormTrait.cpp  FormTrait.h  Graph.cpp  Graph.h  HalfEdge.cpp  HalfEdge.h  Homology.cpp  Homology.h  Iterators.h  LSCM.cpp  LSCM.h  LeastSquare.cpp  LeastSquare.h  Makefile  Makefile.dep  Mesh.cpp  Mesh.h  Parser.cpp  Parser.h  Point.cpp  Point.h  Solid.cpp  Solid.h  Trait.cpp  Trait.h  Vertex.cpp  Vertex.h  lscm.cpp  lscm.h
